wdemo/k8s/wdemo-fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wdemo-fe-service
spec:
  type: NodePort
  selector:
    app: wdemo-fe
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
