wdemo/k8s/wdemo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wdemo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: wdemo.dew.org
      http:
        paths:
          - path: /wdemo-fe
            pathType: ImplementationSpecific
            backend:
              service:
                name: wdemo-fe-service
                port:
                  number: 8080
          - path: /wdemo-be
            pathType: ImplementationSpecific
            backend:
              service:
                name: wdemo-be-service
                port:
                  number: 8080
