wdemo/k8s/wdemo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wdemo-be
  labels:
    app: wdemo-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wdemo-be
  template:
    metadata:
      labels:
        app: wdemo-be
    spec:
      containers:
        - name: main
          image: wdemo-be
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wdemo-fe
  labels:
    app: wdemo-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wdemo-fe
  template:
    metadata:
      labels:
        app: wdemo-fe
    spec:
      containers:
        - name: wdemo-fe
          image: wdemo-fe
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: wdemo-be-service
spec:
  type: NodePort
  selector:
    app: wdemo-be
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: wdemo-fe-service
spec:
  type: NodePort
  selector:
    app: wdemo-fe
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wdemo-ingress
#  annotations:
#    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: wdemo.dew.org
      http:
        paths:
          - path: /wdemo-fe
            pathType: ImplementationSpecific
            backend:
              service:
                name: wdemo-fe-service
                port:
                  number: 8080
          - path: /wdemo-be
            pathType: ImplementationSpecific
            backend:
              service:
                name: wdemo-be-service
                port:
                  number: 8080
